--- a/rackeyassignment1stylesheet.css
+++ b/rackeyassignment1stylesheet.css
@@ -1,10 +1,10 @@
 /*Chris Rackey Assignment 1 Style Sheet*/
 
-Body {
+body {
 	font-family: Cambria;
 	color: #000000;
 	font-size: 24px;
-	background-color: #C0C0C0
+	background-color: #FFE4C4
 }
 
 h1 {
