css file now validated

--- a/rackeyassignment1stylesheet.css
+++ b/rackeyassignment1stylesheet.css
@@ -4,7 +4,7 @@ body {
 	font-family: Cambria;
 	color: #000000;
 	font-size: 24px;
-	background-color: #FFE4C4
+	background-color: #FFE4C4;
 }
 
 h1 {
@@ -12,7 +12,7 @@ h1 {
 	font-size: 66px;
 	padding-bottom: 40px;
 	padding-top: 40px;
-	margin-right: 18%
+	margin-right: 18%;
 	margin-left: 18%;
 }
 
